@@ -165,6 +165,9 @@ Release 2.6.0 - UNRELEASED
     HDFS-4486. Add log category for long-running DFSClient notices (Zhe Zhang
     via Colin Patrick McCabe)
 
+    HDFS-6879. Adding tracing to Hadoop RPC (Masatake Iwasaki via Colin Patrick
+    McCabe)
+
   OPTIMIZATIONS
 
     HDFS-6690. Deduplicate xattr names in memory. (wang)
